--- a/client/mvpclient/package.json
+++ b/client/mvpclient/package.json
@@ -7,17 +7,18 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@headlessui/react": "^1.1.1",
+    "@headlessui/react": "^1.2.0",
     "@heroicons/react": "^1.0.1",
     "@material-ui/core": "^4.11.4",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-material-ui-form-validator": "^2.1.4",
+    "react-router-dom": "^5.2.0",
     "tailwindcss": "^2.1.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.5",
-    "@types/react-dom": "^17.0.0",
+    "@types/react-dom": "^17.0.4",
     "@types/react-material-ui-form-validator": "^2.1.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "typescript": "^4.1.2",
