--- a/client/mvpclient/package.json
+++ b/client/mvpclient/package.json
@@ -10,18 +10,22 @@
     "@headlessui/react": "^1.2.0",
     "@heroicons/react": "^1.0.1",
     "@material-ui/core": "^4.11.4",
+    "@types/react-router-dom": "^5.1.7",
+    "dotenv": "^9.0.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-material-ui-form-validator": "^2.1.4",
     "react-router-dom": "^5.2.0",
+    "react-swipeable-views": "^0.13.9",
     "tailwindcss": "^2.1.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.4",
     "@types/react-material-ui-form-validator": "^2.1.0",
+    "@types/react-swipeable-views": "^0.13.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "typescript": "^4.1.2",
-    "vite": "^2.2.4"
+    "vite": "2.2.4"
   }
 }
