--- a/client/mvpclient/package.json
+++ b/client/mvpclient/package.json
@@ -10,6 +10,8 @@
     "@headlessui/react": "^1.2.0",
     "@heroicons/react": "^1.0.1",
     "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.58",
     "@types/react-router-dom": "^5.1.7",
     "dotenv": "^9.0.2",
     "react": "^17.0.0",
